<resources>
    <string name="app_name">WhisperEcho</string>
    <string name="friends">Prieteni</string>
    <string name="groups">Grupuri</string>
    <string name="add_friend">Adaugă prieten</string>
    <string name="hello_blank_fragment">Salut!</string>
    <string name="username_hint">Nume utilizator</string>
    <string name="password_hint">Parolă</string>
    <string name="login_button_text">Autentifică-te</string>
    <string name="register_text">Înregistrează-te</string>
    <string name="title_activity_login">Autentificare</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Parolă</string>
    <string name="action_sign_in">Autentifică-te sau înregistrează-te</string>
    <string name="action_sign_in_short">Autentifică-te</string>
    <string name="welcome">Bine ai venit !</string>
    <string name="invalid_username">Nume de utilizator invalid</string>
    <string name="invalid_password">Parola trebuie să aibă >5 caractere</string>
    <string name="login_failed">Autentificare eșuată</string>
    <string name="register_failed">Înregistrare eșuată</string>
    <string name="group_icon">Pictogramă grup</string>
    <string name="friend_picture">Fotografie prieten</string>
    <string name="friend_request_avatar">Avatar cerere prietenie</string>
    <string name="send_message">Trimite mesaj</string>
    <string name="text_mesaj">Text mesaj…</string>
    <string name="write_message">Scrie un mesaj...</string>
    <string name="title_chat">Chat</string>
    <string name="friend_avatar">Avatar prieten</string>
    <string name="friend_settings">Setări prieten</string>
    <string name="register_title">Înregistrare cont</string>
    <string name="logout">Deconectare</string>
    <string name="save_name">Salvează numele</string>
    <string name="display_name_hint">Nume afișat</string>
    <string name="change_photo">Schimbă fotografia</string>
    <string name="profile_avatar">Avatar profil</string>
    <string name="settings_title">Setări</string>
    <string name="name_updated">Numele a fost actualizat</string>
    <string name="error_name_empty">Numele nu poate fi gol</string>
    <string name="invalid_email">Adresa de email nu este validă</string>
    <string name="error_login">Email sau parolă greșite</string>
    <string name="error_username_taken">Numele de utilizator este deja folosit</string>
    <string name="error_network">Eroare de internet</string>
    <string name="error_email_already_in_use">Emailul este deja folosit</string>
</resources>